--- a/01-fundamentos-reactjs/src/components/header/Header.module.css
+++ b/01-fundamentos-reactjs/src/components/header/Header.module.css
@@ -3,9 +3,11 @@
     color: white;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 1.25rem 0;
 }
 
 .header img {
     height: 2rem;
+    margin-right: 1rem;
 }
